# Spotify-TF2-Integration

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  base64.cpp  base64.hpp  curl-util.cpp  curl-util.hpp  index.cpp  index.hpp  tf2-logfile.hpp  vcpkg.json
spotify-api/: spotify-api.cpp  spotify-api.hpp
